初始化eureka并入住实例dept

--- a/microservicecloud-provider-dept-8001/src/main/resources/application.yml
+++ b/microservicecloud-provider-dept-8001/src/main/resources/application.yml
@@ -9,7 +9,7 @@ mybatis:
     
 spring:
    application:
-    name: microservicecloud-dept 
+    name: microservicecloud-dept                            #入住eureka名称
    datasource:
     type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
     driver-class-name: org.gjt.mm.mysql.Driver              # mysql驱动包
@@ -21,4 +21,6 @@ spring:
       initial-size: 5                                       # 初始化连接数
       max-total: 5                                          # 最大连接数
       max-wait-millis: 200                                  # 等待连接获取的最大超时时间
+
+eureka:  client:    service-url:      defaultZone: http://localhost:7001/eureka
 
