--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,5 @@ microservicecloud-eureka-7001/target/classes/application.yml
 microservicecloud-provider-dept-8001/.settings/org.springframework.ide.eclipse.prefs
 microservicecloud-consumer-dept-80/.settings/org.springframework.ide.eclipse.prefs
 */target/
+*setting*
+*.classpath
