--- a/microservicecloud-consumer-dept-80/src/main/resources/application.yml
+++ b/microservicecloud-consumer-dept-80/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 server:
   port: 80
 
-
+eureka:
+  client:
+    service-url:
+      defaultZone: http://eureka01:7001/eureka/,http://eureka02:7002/eureka/,http://eureka03:7003/eureka/    register-with-eureka: false
+    
