--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,7 @@
 		<module>microservicecloud-eureka-7002</module>
 		<module>microservicecloud-eureka-7003</module>
 		<module>microservicecloud-consumer-dept-80</module>
+		<module>microservicecloud-consumer-dept-feign</module>
 	</modules>
 
 </project>
